--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["stringifier", "typicode", "yoyoyo"]
+  "cSpell.words": ["stringifier", "typicode", "yoyoyo"],
+  "liveServer.settings.port": 5501
 }
